--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ digitalocean:
   endpoint: https://god-ambulance-space.nyc3.digitaloceanspaces.com
   access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key) %>
   secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret) %>
-  bucket: your-space-name-here
+  bucket: god-ambulance-space
   region: unused
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
