--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,21 +6,13 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-digitalocean:
-  service: S3
-  endpoint: https://god-ambulance-space.nyc3.digitaloceanspaces.com
-  access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret) %>
-  bucket: god-ambulance-space
-  region: unused
-
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
+amazon:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: us-east-1
+  bucket: dog-ambulance-storage-123456
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
