--- a/config/storage.yml
+++ b/config/storage.yml
@@ -13,6 +13,7 @@ amazon:
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: us-east-2
   bucket: dog-ambulance-storage-123456
+  public: true
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
