--- a/.github/workflows/run-rspec-tests.yml
+++ b/.github/workflows/run-rspec-tests.yml
@@ -55,7 +55,7 @@ jobs:
         run: bin/rails db:create db:migrate db:seed
 
       - name: Run Request tests
-        run: bundle exec rspec spec/request/*
+        run: bundle exec rspec spec/requests/*
 
       - name: Keep screenshots from failed system tests
         uses: actions/upload-artifact@v4
