--- a/.github/workflows/run-rspec-tests.yml
+++ b/.github/workflows/run-rspec-tests.yml
@@ -52,7 +52,10 @@ jobs:
         run: bundle exec rails assets:precompile
 
       - name: Setup DB
-        run: bin/rails db:create db:migrate db:seed
+        run: 
+          bin/rails db:create 
+          bin/rails db:migrate 
+          bin/rails db:seed
 
       - name: Run Request tests
         run: bundle exec rspec spec/requests/*
