--- a/.github/workflows/run-rspec-tests.yml
+++ b/.github/workflows/run-rspec-tests.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Setup DB
         run: 
-          bin/rails db:create 
+          bin/rails db:create:all
           bin/rails db:migrate 
           bin/rails db:seed
 
